--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,6 +1,7 @@
 <div class="text-left">
   <h1>グループ登録画面</h1>
   <%= link_to 'サービスTOPへ', root_path, class: 'btn btn-lg btn-primary' %>
+  <%= link_to 'グループ一覧へ', groups_path, class: 'btn btn-lg btn-primary' %>
 </div>
 
 <div class="row">
