--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,5 +1,5 @@
 <div class="text-left">
-  <h1>グループ登録画面</h1>
+  <h1>グループ登録画面/更新画面</h1>
   <%= link_to 'サービスTOPへ', root_path, class: 'btn btn-lg btn-primary' %>
   <%= link_to 'グループ一覧へ', groups_path, class: 'btn btn-lg btn-primary' %>
 </div>
@@ -22,10 +22,11 @@
 
       <div class="form-group">
         <%= f.label :sentence, '説明文' %>
-        <%= f.text_field :sentence, class: 'form-control' %>
+        <%= f.text_area :sentence, class: 'form-control' %>
       </div>
   
       <%= f.submit '登録する', class: 'btn btn-primary btn-block' %>
+      <%= f.hidden_field :group_id, value: @group.id %>
     <% end %>
   </div>
 </div>
