--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -3,26 +3,30 @@
 <%= link_to '編集', edit_group_path, class: 'btn btn-lg btn-primary' %>
 
 <div class="text-left">
+ <hr align="center">
   <h4>グループタイトル</h4>
     <%= @group.title %>
+ <hr align="center">
   <h4>グループメンバー</h4>
     <% @members.each do |member| %>
       <li class="media">
         <%= member.name %>
       </li>
     <% end %>
+ <hr align="center">
   <h4>説明文</h4>
     <%= @group.sentence %>
+ <hr align="center">
   <h4>コメント</h4>
-  
-  <%= form_for(@post) do |f| %>
+   <%= form_for(@post) do |f| %>
     <div class="form-group">
       <%= f.text_area :content, class: 'form-control', rows: 5 %>
     </div>
       <%= f.submit '書き込む', class: 'btn btn-primary btn-block' %>
       <%= f.hidden_field :group_id, value: @group.id %>
-  <% end %>
-  
+   <% end %>
+ <hr align="center">
+  <%= link_to 'グループで行きたいお店を追加', restaurants_path, class: 'btn btn-lg btn-primary' %>
   <%= paginate(@created_posts) %>
   <% @created_posts.each do |created_post| %>
     <li class="media">
@@ -39,7 +43,9 @@
       </div>
     </li>
   <% end %>
-  
+
+  <hr align="center">
+
 </div>
 
 <style>
