--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -14,6 +14,7 @@
   <% @restaurants.each do |restaurant| %>
     <li>
       <%= "#{restaurant.name}、" %><%= restaurant.address %>、<%= restaurant.area %>、<%= restaurant.station+'、' %><%= restaurant.phone_number %>
+    　<%= render 'favorites/like_button', restaurant: restaurant %>
     </li>
   <% end %>
 </div>
