--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -32,13 +32,10 @@
     <li class="media">
       <div class="media-body">
         <div>
-          <%= created_post.user.name %>
+          <p>ユーザ名：<%= created_post.user.name %>　  投稿日時：<%= created_post.created_at %></p>
         </div>
         <div>
           <%= created_post.content %>
-        </div>
-        <div>
-          <%= created_post.created_at %>
         </div>
       </div>
     </li>
@@ -51,7 +48,7 @@
     <li class="media">
       <div class="media-body">
         <div>
-          <%= like_reataurant.restaurant.name %>、<%= like_reataurant.restaurant.area %>
+          <%= like_reataurant.restaurant.name %>、<%= like_reataurant.restaurant.area %>、<%= like_reataurant.restaurant.station %>、<%= like_reataurant.restaurant.phone_number %>
         </div>
       </div>
     </li>
