--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -8,7 +8,7 @@
 
 
 <h4>検索結果</h4>
-<h4>HIT件数<%= @count_restaurants %>件/10件</h4>
+<h4>HIT件数<%= @count_restaurants %>件/<%= @restaurants_all %></h4>
 
 <div class="row">
   <% @restaurants.each do |restaurant| %>
@@ -17,4 +17,5 @@
     　<%= render 'favorites/like_button', restaurant: restaurant %>
     </li>
   <% end %>
+<%= link_to 'グループ詳細へ', groups_path, class: 'btn btn-lg btn-primary' %>
 </div>
