--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -2,6 +2,7 @@
   <h1>グループ登録画面/更新画面</h1>
   <%= link_to 'サービスTOPへ', root_path, class: 'btn btn-lg btn-primary' %>
   <%= link_to 'グループ一覧へ', groups_path, class: 'btn btn-lg btn-primary' %>
+  <h4>「＊」は必須項目です。</h4>
 </div>
 
 <div class="row">
@@ -11,7 +12,7 @@
       <%= render 'layouts/error_messages', model: f.object %>
 
       <div class="form-group">
-        <%= f.label :title, 'タイトル' %>
+        <%= f.label :title, 'タイトル(※)' %>
         <%= f.text_field :title, class: 'form-control' %>
       </div>
 
@@ -21,7 +22,7 @@
       </div>
 
       <div class="form-group">
-        <%= f.label :sentence, '説明文' %>
+        <%= f.label :sentence, '説明文(※)' %>
         <%= f.text_area :sentence, class: 'form-control' %>
       </div>
   
