--- a/app/views/groups/restaurant_search.html.erb
+++ b/app/views/groups/restaurant_search.html.erb
@@ -1,8 +1,9 @@
 <%= link_to 'グループ詳細へ', group_path(@group), class: 'btn btn-lg btn-primary' %>
 
 <%= form_tag(restaurant_search_group_path, :method => :get) do %>
-  <%= select_tag :restaurant_area, options_for_select([["恵比寿", "恵比寿"],["目黒","目黒"],["品川","品川"],["東京","東京"],["二子玉川","二子玉川"]]), include_blank: true %>
-  <%= label_tag :name, "お店" %><%= text_field_tag :search %>
+  <%= select_tag :restaurant_area, options_for_select([['',''],["恵比寿", "恵比寿"],["目黒","目黒"],["品川","品川"],["東京","東京"],["二子玉川","二子玉川"]],
+      include_blank: true, selected: (params[:restaurant_area])) %>
+  <%= label_tag :name, "お店" %><%= text_field_tag :search, {}, value: ((params[:search]) if params[:search]) %>
   <%= submit_tag 'Search', :name => nil %>
 <% end %>
 
